--- a/lesson_4/index.html
+++ b/lesson_4/index.html
@@ -20,9 +20,9 @@
         <h3>My Daily Schedule</h3>
         <p>Let me tell you how I: </p>
         <ol>
-            <li>...learn more about web dev
-            <li>...plan out my schedule
-            <li>...use resources from MDN.
+            <li>...learn more about web dev</li>
+            <li>...plan out my schedule</li>
+            <li>...use resources from MDN.</li>
         </ol>
         
         <hr>
